src/test/ui/nll/issue-52534-2.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/issue-52534-2.rs:6:9
   |
LL |         y = &x
   |         ^^^^^^ borrowed value does not live long enough
LL |
LL |     }
   |     - `x` dropped here while still borrowed
LL | 
LL |     println!("{}", y);
   |                    - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
